# midterm_poc

./: .gitignore  01-cleanragcsv.ipynb  02-testembedtune copy.ipynb  03-testembedtune.ipynb  README.md  READMEresponses.md  app.py  app_working_on_agentic.py  chainlit.md  comparison_results.csv  pyproject.toml  requirements.txt
example_files/: comparison_results.csv
