[project]
name = "midterm_poc"
version = "0.1.0"
description = "midterm POC huggingface project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chainlit",
    "langchain",
    "langchain_community",
    "tqdm",
    "PyMuPDF",
    "openai>=1.59.9",
    "pypdf2>=3.0.1",
    "websockets",
    "qdrant-client",
    "langchain",
    "langchain-community",
    "langchain-openai",
    "unstructured",
    "pymupdf",
    "qdrant-client",
    "langgraph",
    "langchain-core",
    "langchain-openai",
    "langchain-community",
    "ragas",
    "langchain_experimental",
    ###review
    ### cleanup
    "langchain-core==0.3.31",
    "langchain==0.3.15",
    "langchain-community==0.3.15",
    "langchain-openai==0.3.1",
    "langchain-qdrant==0.2.0",
    "langchain-text-splitters>=0.3.5",
    "langchain-huggingface==0.1.2",
    #"langgraph>=0.2.67",
    "langsmith>=0.3.1",
    "lxml>=5.3.0",
    ###notebook
    "ipykernel",
    "ipywidgets",
    "IProgress",
    "huggingface_hub",
    "wandb",
    "transformers",
    "accelerate",
    "torch",
    #### ragas
    #"ragas==0.2.10"
    #"FAISS"
    #remove only used for testing
    "cohere",
    "langchain_cohere",
    "arxiv"
]
